--- a/netflix.css
+++ b/netflix.css
@@ -33,3 +33,20 @@
     border-color: rgba(0, 0, 0, 0);
     margin: 1rem 0px;
 }
+
+iframe {
+    
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    border-color: transparent;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    overflow-x: hidden;
+}
